Cambiamos los mapas de ubicación y eliminamos Trikuhaizti I & II del mapa interactivo

--- a/html/historia/mapa-dolmenes.html
+++ b/html/historia/mapa-dolmenes.html
@@ -31,9 +31,10 @@
           <button class="lang fw-bolder" onclick="history.back()">Atzera</button>
           <!--<button class="lang fw-bolder">Idioma</button>-->
         </div>
-        <article class="maps-container">
-          <div id="map"></div>
-        </article>
+            <article class="maps-container">
+                <p class="map fs-5"><img  src="../../media/MapaTrikuharri.png" alt="proceso"></p>
+            </article>
+
 
             <article class="maps-info-container">
                 <ol id="info">
