--- a/html/mandubi/mapa.html
+++ b/html/mandubi/mapa.html
@@ -32,17 +32,17 @@
             <!--<article class="maps-container">
                 <div id="map"></div>
             </article>-->
-            <article class="maps-container">
-                <p class="map fs-5"><img  src="../../media/MapaTrikuharri.png" alt="proceso"></p>
-            </article>
+        <article class="maps-container">
+          <div id="map"></div>
+        </article>
             
             <article class="maps-info-container">
                 <ol id="info">
                   <li>
                     <h1 class="title fs-1">Informazioa</h1>
                     <ul class="container-text-maps">
-                      <li><img src="../../media/townBlue.svg" alt="icono pueblos"><p><u>Gertuko herriak:</u><br>
-                         Itsaso, Ezkio, Ormaiztegi, Beasain, Gabiria, Arriaran, Matxinbenta, Zumarraga, Urretxu</p></li>
+                      <li><img src="../../media/townBlue.svg" alt="icono pueblos"><p><u>Kokapena:</u><br>
+                         Itsasoko Mandubia mendatetik 300 metrotara, Kizkitzara bidean (GR34 eta barnealdeko Done Jakue bidearen ertzean).</p></li>
                       <button class="button-info" onclick=" window.open('https://goo.gl/maps/MStcKPMKZuhxoo5v7','_blank')">
                     <div><img src="../../media/roadWhite.svg" alt="icon como llegar"></div>
                     <div><p>Aparkalekua</p></div>
@@ -57,5 +57,8 @@
             </article>
         </section>
     </div>
+    <!-- Api Mapbox -->
+    <script src='https://api.mapbox.com/mapbox-gl-js/v2.6.1/mapbox-gl.js'></script>
+    <script src="../../js/main.js"></script>
 </body>
 </html>
