Agregamos la imagen 360º de Mandubizelaia sin el dolmen

--- a/html/mandubi/img360.html
+++ b/html/mandubi/img360.html
@@ -22,11 +22,10 @@
             <div class="container-button">
                 <button class="lang fw-bolder" onclick="history.back()">Atzera</button>
             </div>
-            <a-scene>
+            <a-scene vr-mode-ui="enabled: false">
                 <a-sky   
-                src = "../../media/gettyimages-1248257041-2048x2048.jpg"
-                rotation="0 -100 0"
-                radius="50"></a-sky >
+                src = "../../media/Mandubi360.jpg"
+                rotation="0 60 0"></a-sky >
             </a-scene >
         </section>
     </div>
