Agregamos las fotos que faltaban en la galería. Juntamos las dos galería en una

--- a/html/mandubi/galeria.html
+++ b/html/mandubi/galeria.html
@@ -87,41 +87,12 @@
                             alt="09_Mandubi"
                             data-description="Mandubi 9 zelaiko trikuharriaren argazkiak"
                         />
-                        <img
-                            src="../../media/GaleriaFotos/Mandubi/10_Mandubi.jpg"
-                            class="item"
-                            alt="10_Mandubi"
-                            data-description="Mandubi 10 zelaiko trikuharriaren argazkiak"
-                        />
-                        <img
-                            src="../../media/GaleriaFotos/Mandubi/11_Mandubi.jpg"
-                            class="item"
-                            alt="11_Mandubi"
-                            data-description="Mandubi 11 zelaiko trikuharriaren argazkiak"
-                        />
-                        <img
-                            src="../../media/GaleriaFotos/Mandubi/12_Mandubi.jpg"
-                            class="item"
-                            alt="12_Mandubi"
-                            data-description="Mandubi 12 zelaiko trikuharriaren argazkiak"
-                        />
+
                         <img
                             src="../../media/GaleriaFotos/Mandubi/13_Mandubi.jpg"
                             class="item"
                             alt="13_Mandubi"
                             data-description="Mandubi 13 zelaiko trikuharriaren argazkiak"
-                        />
-                        <img
-                            src="../../media/GaleriaFotos/Mandubi/14_Mandubi.jpg"
-                            class="item"
-                            alt="14_Mandubi"
-                            data-description="Mandubi 14 zelaiko trikuharriaren argazkiak"
-                        />
-                        <img
-                            src="../../media/GaleriaFotos/Mandubi/15_Mandubi.jpg"
-                            class="item"
-                            alt="15_Mandubi"
-                            data-description="Mandubi 15 zelaiko trikuharriaren argazkiak"
                         />
                         <img
                             src="../../media/GaleriaFotos/Mandubi/16_Mandubi.jpg"
@@ -135,6 +106,125 @@
                             alt="17_Mandubi"
                             data-description="Mandubi 17 zelaiko trikuharriaren argazkiak"
                         />
+
+                        <!-- Kalkolito garaikoak -->   
+
+                        <img src="../../media/GaleriaFotos/Piezas/Kalkolito-Mandubizelaia-garezurra.jpeg"
+                             class="item"
+                             alt="Garezurra"
+                             data-description="Kalkolito garaikoak - Mandubizelaia trikuharrian aurkitutako garezurra"/>
+
+                        <img src="../../media/GaleriaFotos/Piezas/Kalkolito-Mandubizelaia-matrailezurra-2.jpeg"
+                             class="item"
+                             alt="Matrailezurra"
+                             data-description="Kalkolito garaikoak - Mandubizelaia trikuharrian aurkitutako gazte baten matrailezurra"/>
+
+                        <img src="../../media/GaleriaFotos/Piezas/Kalkolito-Mandubizelaia-matrailezurra-3.jpeg"
+                             class="item"
+                             alt="Beheko matrailezurra"
+                             data-description=" Kalkolito garaikoak - Gazte baten beheko matrailezurra. Esne-haginak azpian hagin iraunkorra bultzaka duela ikus daiteke."/>
+
+                        <img src="../../media/GaleriaFotos/Piezas/Kalkolito-Mandubizelaia-matrailezurra.jpeg"
+                             class="item"
+                             alt="Matrailezurra"
+                             data-description="Kalkolito garaikoak - Mandubizelaia trikuharrian aurkitutako heldu baten matrailezurra"/>
+
+                        <img src="../../media/GaleriaFotos/Piezas/Kalkolito-Mandubizelaia-botoia.jpeg"
+                             class="item"
+                             alt="Botoia"
+                             data-description="Kalkolito garaikoak - V-erara zulatutako hezurrezko botoia"/>
+
+                        <img src="../../media/GaleriaFotos/Piezas/Kalkolito-Mandubizelaia-gezipunta-1.jpeg"
+                             class="item"
+                             alt="Gezipunta 1"
+                             data-description="Kalkolito garaikoak - Orratza. 5,6 cm. Hezurrez ardi-metapodio baten zatian egindako orratza. Ziurrenik arropa eusteko edota ilerako erabilita."/>
+
+                        <img src="../../media/GaleriaFotos/Piezas/Kalkolito-Mandubizelaia-gezipunta-2.jpeg"
+                             class="item"
+                             alt="Gezipunta 2"
+                             data-description="Kalkolito garaikoak - Suharria edo mugerra. 2,9 cm. Gezi-punta hostokara baten urrun aldeko zatia"/>
+
+                        <img src="../../media/GaleriaFotos/Piezas/Kalkolito-Mandubizelaia-ijelkia.jpeg"
+                             class="item"
+                             alt="Ijelkia"
+                             data-description="Kalkolito garaikoak - Suharrizko ijelkia. 3,6 cm. Zuzenean labana gisa erabil zitekeen zatia edo beste tresna batzuk egiteko erabil zitekeen zatia"/>
+
+                        <img src="../../media/GaleriaFotos/Piezas/Kalkolito-Mandubizelaia-koilare-alea.jpeg"
+                             class="item"
+                             alt="Koilare alea"
+                             data-description="Kalkolito garaikoak - Koilare-alea (apaingailua). 3,2 cm. Lepoko, eskumuturreko edo bestelako apaingarriak osatzeko. Ardi berna-hezur zati batean egindako koilare alea erabiltzen zen"/>
+
+                        <img src="../../media/GaleriaFotos/Piezas/Kalkolito-Mandubizelaia-orratza.jpeg"
+                             class="item"
+                             alt="Orratza"
+                             data-description="Kalkolito garaikoak - Orratza. 5,6 cm. Hezurrez ardi-metapodio baten zatian egindako orratza. Ziurrenik arropa eusteko edota ilerako erabilita."/>
+
+                        <img src="../../media/GaleriaFotos/Piezas/Kalkolito-Madubizelaia-neurriak-2.jpeg"
+                             class="item"
+                             alt=""
+                             data-description="Kalkolito garaikoak - Neurriak: 35,8 x 14 x 4,6 mm"/>
+
+                        <img src="../../media/GaleriaFotos/Piezas/Kalkolito-Madubizelaia-neurriak.jpeg"
+                             class="item"
+                             alt="Koilare alea"
+                             data-description="Kalkolito garaikoak - Neurriak: 11,8 x 1,2 x 0,9 cm"/>
+
+                        <img src="../../media/GaleriaFotos/Piezas/Kalkolito-Mandubizelaia-hezur-landua.jpeg"
+                             class="item"
+                             alt="Hezur zizela"
+                             data-description="Kalkolito garaikoak - Hezur landuan egindako zizela. 8,1 x 1,84 x 1,18 cm."/>
+
+                        <img src="../../media/GaleriaFotos/Piezas/Kalkolito-Mandubizelaia-lignitozko-lepokoa.jpeg"
+                             class="item"
+                             alt="Lignitozko lepokoa"
+                             data-description="Kalkolito garaikoak - Lignitozko lepoko baten ale beltza. 2,2 x 1,9 x 1,7 cm"/>
+
+
+                        <!-- Brontze garaikoak -->
+                        <img src="../../media/GaleriaFotos/Piezas/Brontze-Mandubizelaia-ezten.jpeg"
+                             class="item"
+                             alt="Ezten puntabikoa"
+                             data-description="Brontze garaikoak - Ezten puntabikoa. Erronbo ebakidura du. Bi ildo fin eta sakon ditu, agian kirten bat txertatzeko. 5 cm."/>
+
+                        <img src="../../media/GaleriaFotos/Piezas/Brontze-Mandubizelaia-lurrontzia-1.jpeg"
+                             class="item"
+                             alt="Lurrontzia 1"
+                             data-description="Brontze garaikoak - Lurrontzia"/>
+
+                        <img src="../../media/GaleriaFotos/Piezas/Brontze-Mandubizelaia-lurrontzia-2.jpeg"
+                             class="item"
+                             alt="Lurrontzia 2"
+                             data-description="Brontze garaikoak - Lurrontzia"/>
+
+                        <img src="../../media/GaleriaFotos/Piezas/Brontze-Mandubizelaia-lurrontzia-3.jpeg"
+                             class="item"
+                             alt="Lurrontzia 3"
+                             data-description="Brontze garaikoak - Lurrontzia"/>
+
+                        <img src="../../media/GaleriaFotos/Piezas/Brontze-Mandubizelaia-lurrontzia-4.jpeg"
+                             class="item"
+                             alt="Lurrontzia 4"
+                             data-description="Brontze garaikoak - Lurrontzia"/>
+
+                        <img src="../../media/GaleriaFotos/Piezas/Brontze-Mandubizelaia-gezipunta-3.jpeg"
+                             class="item"
+                             alt="Gezipunta 3"
+                             data-description="Brontze garaikoak - Txorten eta hegaldun gezi-punta, 3 cm. Hegaletako bat apurtua du."/>
+
+                        <img src="../../media/GaleriaFotos/Piezas/Brontze-Mandubizelaia-gezipunta-4.jpeg"
+                             class="item"
+                             alt="Gezipunta 4"
+                             data-description="Brontze garaikoak - Txorten eta hegaldun gezi-punta, 3 cm. Hegaletako bat apurtua du."/>
+
+                        <img src="../../media/GaleriaFotos/Piezas/Brontze-Mandubizelaia-gezipunta-5.jpeg"
+                             class="item"
+                             alt="Gezipunta 5"
+                             data-description="Brontze garaikoak - Txorten eta hegaldun gezi-punta, 3 cm. Hegaletako bat apurtua du."/>
+
+                        <img src="../../media/GaleriaFotos/Piezas/Brontze-Mandubizelaia-gezipunta-6.jpeg"
+                             class="item"
+                             alt="Gezipunta 6"
+                             data-description="Brontze garaikoak - Txorten eta hegaldun gezi-punta, 3 cm. Hegaletako bat apurtua du."/>
                         </div>
                     </div>
                     <button id="prev">
