--- a/html/historia/mapa-dolmenes.html
+++ b/html/historia/mapa-dolmenes.html
@@ -32,29 +32,23 @@
           <!--<button class="lang fw-bolder">Idioma</button>-->
         </div>
             <article class="maps-container">
+                <p class="fs-5">Trikuharri gehienak mendi aldean kokatzen dira eta horrek pentsarazten du hor bizi ziren giza-taldeak abeltzain trashumanteak izango zirela. Neguan ez ziren bertan biziko, Neolitotik aurrera nekazaritzatik eta abelazkuntzatik bizi ziren euren jatorriko herrixketara itzuliko ziren.</p>
                 <p class="map fs-5"><img  src="../../media/MapaTrikuharri.png" alt="proceso"></p>
             </article>
 
+            <article class="container-cards-scroll pt-2 ps-4 pe-4">
+                <p class="fs-5">Tresna gehienak suharriz egiten ziren eta arrunta ez denez, non agertzen den ikertu da: Flysch (Kurtzia–Barrika), Gaintxurizketa, Urbasa (Mugarduia), Trebiño (Araiko), Ebroko Ebaporitikoa (Tudela), Baiona inguruetan...</p>
 
-            <article class="maps-info-container">
-                <ol id="info">
-                  <li>
-                    <h1 class="title fs-1">Informazioa</h1>
-                    <ul class="container-text-maps">
-                      <li><img src="../../media/townBlue.svg" alt="icono pueblos"><p><u>Gertuko herriak:</u><br>
-                         Itsaso, Ezkio, Ormaiztegi, Beasain, Gabiria, Arriaran, Matxinbenta, Zumarraga, Urretxu</p></li>
-                      <button class="button-info" onclick=" window.open('https://goo.gl/maps/MStcKPMKZuhxoo5v7','_blank')">
-                    <div><img src="../../media/roadWhite.svg" alt="icon como llegar"></div>
-                    <div><p>Aparkalekua</p></div>
-                </button>  
-                    </ul>
-                  </li>
-                </ol>
-                <button class="button-info" onclick=" window.open('https://goo.gl/maps/bqdba14S4fdR5iZR6','_blank')">
-                    <div><img src="../../media/roadWhite.svg" alt="icon como llegar"></div>
-                    <div><p>Mandubizelaia</p></div>
-                </button>
+                <p class="fs-5">Abeltzainak transhumantzian zetozenez euren eskualdean erabiltzen zituzten suharriak ekarriko zituzten, batez ere hurbilenekoak. Mandubizelaian berriz ugarienak Flyschekoak dira, kostaldekoak. Urbasa (hurbilenekoa Mandubitik), Ebaporitiko eta Trebiñukoak proportzio txikiagoan agertzen dira, baina inguru horietakoekin bazituzten harremanak.</p>
+
+                <img width="70%" src="../../media/Suharriena_jatorria.jpeg" alt="dolmen de Mandubi">
+                <p class="fs-5">Suharrien jatorrien mapa. A. Tarriño doktoreak egina (UPV/EHU)</p>
+                <br>
+                <br>
+                <a href="https://www.itsaso.eus/eu/mandubizelaia-trikuharria#MANDUBIZELAIA" target="_blank"><button class="lang fw-bolder">+ info</button></a>  
+
             </article>
+
 
       </section>
     </div>
