--- a/html/mandubi/galeria.html
+++ b/html/mandubi/galeria.html
@@ -149,11 +149,6 @@
                              alt="Ijelkia"
                              data-description="Kalkolito garaikoak - Suharrizko ijelkia. 3,6 cm. Zuzenean labana gisa erabil zitekeen zatia edo beste tresna batzuk egiteko erabil zitekeen zatia"/>
 
-                        <img src="../../media/GaleriaFotos/Piezas/Kalkolito-Mandubizelaia-koilare-alea.jpeg"
-                             class="item"
-                             alt="Koilare alea"
-                             data-description="Kalkolito garaikoak - Koilare-alea (apaingailua). 3,2 cm. Lepoko, eskumuturreko edo bestelako apaingarriak osatzeko. Ardi berna-hezur zati batean egindako koilare alea erabiltzen zen"/>
-
                         <img src="../../media/GaleriaFotos/Piezas/Kalkolito-Mandubizelaia-orratza.jpeg"
                              class="item"
                              alt="Orratza"
@@ -185,6 +180,11 @@
                              class="item"
                              alt="Ezten puntabikoa"
                              data-description="Brontze garaikoak - Ezten puntabikoa. Erronbo ebakidura du. Bi ildo fin eta sakon ditu, agian kirten bat txertatzeko. 5 cm."/>
+
+                        <img src="../../media/GaleriaFotos/Piezas/Brontze-Mandubizelaia-koilare-alea.jpeg"
+                             class="item"
+                             alt="Koilare alea"
+                             data-description="Brontze garaikoak - Koilare-alea (apaingailua). 3,2 cm. Lepoko, eskumuturreko edo bestelako apaingarriak osatzeko. Ardi berna-hezur zati batean egindako koilare alea erabiltzen zen"/>
 
                         <img src="../../media/GaleriaFotos/Piezas/Brontze-Mandubizelaia-lurrontzia-1.jpeg"
                              class="item"
