--- a/html/mandubi/industaketa.html
+++ b/html/mandubi/industaketa.html
@@ -21,31 +21,37 @@
                 <button class="lang fw-bolder" onclick="history.back()">Atzera</button>
                 <!--<button class="lang fw-bolder">Idioma</button>-->
             </div>
+
             <article class="overflow-auto container-cards-scroll pt-2 ps-4 pe-4">
-                <h1 class="title fs-1">Mandubizelaia Trikuharria</h1>
 
-                 <p class="fs-5">Mandubizelaiko hilobi-arkitektura eraikitzeko, inguruan (Kalteralde, Kizkitza) azaleratzen ziren basaltoak erabili ziren.
-Tumulua ia bakarrik harri-mota honekin egin zen, baina basaltoak forma egokiko harlauzak ez dituenez eskaintzen, ganberako zorua prestatzeko eta harlauzetarako kareharri tupatsuak eta arbela erabili zituzten.
-Arbela galkorragoa denez (ganberako 3 harlauzatatik 2 hala dira), industu ondoren (UPV/EHU, 1998-2000) estaltzea erabaki zen, ez zedin gehiago hondatu.
-</p>
+                <h1 class="title fs-1">Industaketa Mandubizelaia Trikuharria</h1>
 
-                <!--<img class="img-float" src="../../media/GaleriaFotos/Mandubi/02_Mandubi.jpg" alt="dolmen de Mandubi">
-                <img class="img-float" src="../../media/GaleriaFotos/Mandubi/08_Mandubi.jpg" alt="dolmen de Mandubi">-->
+                 <p class="fs-5">Trikuharria 1998-2000 urteetako 3 udatan zehar industu zen EHUko Joxean Mujika arkeologoa buru zela, Gipuzkoako Foru Aldundiako dirulaguntzaz eta UPV/EHUko ikasleen borondatezko lanarekin.</p>
 
-                <p class="fs-5">Tumuluak 17 metroko diametroa du. Erdialdean, gutxi-gorabehera, ekialdetik mendebaldera trapezio-formako ganbera kokatzen da, 1,80 m luze dena, nahiz eta ganberaren alde baterako 3 m luze zen harlauza bat aukeratu. Zabalera, buru aldean, 1,14 m eta beste muturrean, ekialdean, 0,80 m da.</p> <br><br>
+                <p class="fs-5"><img class="w-100" src="../../media/investigacion.png" alt="proceso"></p>
 
-                
+                <p class="fs-5">Hasierako ideia trikuharria erakusgarri jartzea izan bazen ere, horretarako zein neurri har ote zitezkeen aztertu zen. Azkenean, Giorgio Studer, orduko Gipuzkoako Foru Aldundiko errestauradorea, eta Joxean Mujika arkeologoaren aholkuaz baztertu egin zen, izan ere hiru harlauza handietatik bakarra da kareharrizkoa eta beste biak arbel-harrizkoak direnez, azalean utziz gero izotzagatik asko hondatuko zirela-eta, berriro lurrez estaltzea erabaki zen.</p>
 
-                <a href="https://www.itsaso.eus/eu/mandubizelaia-trikuharria#MANDUBIZELAIA" target="_blank"><button class="lang fw-bolder">+ info</button></a>
+                <p class="fs-5">Horregatik, indusketa amaitu ondoren aurretik zuen itxura eman ahal izateko ateratako harriak eta lurrak itzuli ziren egiturara.</p>
 
+                <br>
+                <h3>Nork egin zituen ikerketa eta indusketa?</h3>
+                <p class="fs-5">J. Etxanizek aspaldidanik ezagutzen zuen tokia eta kanpoko itxurak Trikuaiztiko egituren antza zuelako Imanol Goikoetxeari jakinarazi zion 1997an eta honek J. A. Mujikari. Azken honen zuzendaritzapean induskatu zen hiru urteetan (1998-2000). Landa-lanak Gipuzkoako Foru Aldundiako dirulaguntza izan zuen eta UPV/EHUko ikasleen borondatezko lanarekin egin ziren indusketak.</p>
+
+                <br>
+                <h3>Babesleak</h3>
+                <p class="fs-5"><img class="w-50" src="../../media/BannerMandubi.png" alt="proceso"></p>
+
+                <a href="https://www.itsaso.eus/eu/mandubizelaia-trikuharria" target="_blank"><button class="lang fw-bolder">+ info</button></a>
 
             </article>
+
         </section>
         <nav class="nav-bar">
             <ol class="p-0 m-0">
                 <li class="button-nav-bar"><a href="mapa.html"><img src="../../media/roadWhite.svg" alt="icono como llegar"><p>Nola iritsi</p></a></li>
                 <li class="button-nav-bar"><a href="industaketa.html"><img src="../../media/investigationWhite.svg" alt="icono Investigación"> <p>Industaketa</p></a></li>
-                <li class="button-nav-bar"><a href="industaketa.html"><img src="../../media/galeryWhite.svg" alt="icono galería"><p>Argazkiak</p></a></li>
+                <li class="button-nav-bar"><a href="galeria.html"><img src="../../media/galeryWhite.svg" alt="icono galería"><p>Argazkiak</p></a></li>
                 <!--<li class="button-nav-bar"><a href="galeriaVR.html"><img src="../../media/vrWhite.svg" alt="icono galeria realidad aumentada"><p>VR Galeria</p></a></li>-->
                 <li class="button-nav-bar"><a href="img360.html"><img src="../../media/360White.svg" alt="icono 360º"><p>Mandubi</p></a></li>
             </ol>
