--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@300&family=Roboto:wght@500&display=swap" rel="stylesheet">
     <link rel="icon" type="image/x-icon" href="media/dolmenBlue.svg">
+    <script src="https://aframe.io/releases/1.2.0/aframe.min.js"></script>
+    <script type="module" src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js"></script>
 </head>
 <body>
     <!--Panel principal-->
@@ -20,20 +22,52 @@
             <div class="container-button">
                 <!--<button class="lang fw-bolder">Idioma</button>-->
             </div>
-            <article class="img-fondo">
+            <!--<article class="img-fondo">
                 <div><h1 class="title fs-1">Mandubizelaia Trikuharria</h1></div>
                 <img src="media/portada2.png" alt="Dólmen Mandubi">
-            </article>
+            </article>-->
+            <a-scene vr-mode-ui="enabled: false">
+                <a-sky   
+                src = "media/Panorama360.jpg"
+                rotation="0 -130 0"></a-sky >
+            </a-scene >
         </section>
 
+        <!-- Menu lateral -->
         <nav class="nav-bar">
             <ol class="p-0 m-0">
                 <li class="button-nav-bar"><a href="html/historia/historia.html"><img src="media/historyWhite.svg" alt="icono Historia"><p>Testuingurua</p></a></li>
                 <li class="button-nav-bar"><a href="html/mandubi/mandubi.html"><img src="media/dolmenWhite.svg" alt="icono Dolmen"> <p>Mandubizelaia</p></a></li>
-                <li class="button-nav-bar"><a href="html/investigacion/investigacion.html"><img src="media/investigationWhite.svg" alt="icono Investigación"> <p>3D esperientzia</p></a></li>
+                <li class="button-nav-bar"><a href="html/3D/explicacion.html"><img src="media/investigationWhite.svg" alt="icono Investigación"> <p>3D esperientzia</p></a></li>
             </ol>
         </nav>
     </div>
+
+    <!-- Contenedor 3D -->
+        <div id="contenedor3D" class="contenedor3D">
+                <model-viewer
+                    id="imgGalery"
+                    class="Model3d"
+                    bounds="tight"
+                    src="media/3D_Trikuharri/Escalado/GLB/GLB_Trikuharri_Itxia_Escalado.glb"
+                    ios-src="media/3D_Trikuharri/Escalado/USDZ/USDZ_trikuharri_itxia_escalado.usdz"
+                    alt="dolmen 1"
+                    data-description="recreacion del dolmen 1"
+                    ar ar-modes="webxr scene-viewer quick-look"
+                    camera-controls
+                    autoplay
+                    environment-image="neutral"
+                    shadow-intensity="1">
+
+                    <button slot="ar-button" style="background-color: white; border-radius: 4px; border: none; position: absolute; top: 16px; left: 5px; height: 30px;">
+                         👁️‍🗨️Ikusi zure mugikorrean 👁️‍🗨️ 
+                    </button>
+
+                    <div class="progress-bar hide" slot="progress-bar">
+                        <div class="update-bar"></div>
+                    </div>
+                </model-viewer>
+        </div>
 
 </body>
 </html>
