--- a/html/3D/explicacion.html
+++ b/html/3D/explicacion.html
@@ -24,9 +24,9 @@
             <article class="overflow-auto container-cards-scroll pt-2 ps-4 pe-4">
                 <h1 class="title fs-1">3D esperientziaren azalpena</h1>
 
-                <p class="fs-5">Hurrengo pausuak jarraitu Errealitate Areagotuko esperientziaz gozatzeko. Errealitate Areagotuko esperientzia, 3D Estatiko atalean froga dezakezu.</p>
+                <p class="fs-5">Hurrengo pausuak jarraitu Errealitate Areagotuko esperientziaz gozatzeko. Errealitate Areagotuko esperientzia, <b>3D Estatiko</b> atalean froga dezakezu.</p>
                 
-                <center><p class="fs-5"><img class="w-50" src="../../media/instrucciones.png" width="100%" alt="proceso"></p></center>
+                <center><p class="fs-5"><img src="../../media/instrucciones.png" width="90%" alt="proceso"></p></center>
 
             </article>
         </section>
