Eliminamos espacios innecesarios en la pagina de mandubi

--- a/html/mandubi/mandubi.html
+++ b/html/mandubi/mandubi.html
@@ -32,9 +32,7 @@ Arbela galkorragoa denez (ganberako 3 harlauzatatik 2 hala dira), industu ondore
                 <!--<img class="img-float" src="../../media/GaleriaFotos/Mandubi/02_Mandubi.jpg" alt="dolmen de Mandubi">
                 <img class="img-float" src="../../media/GaleriaFotos/Mandubi/08_Mandubi.jpg" alt="dolmen de Mandubi">-->
 
-                <p class="fs-5">Tumuluak 17 metroko diametroa du. Erdialdean, gutxi-gorabehera, ekialdetik mendebaldera trapezio-formako ganbera kokatzen da, 1,80 m luze dena, nahiz eta ganberaren alde baterako 3 m luze zen harlauza bat aukeratu. Zabalera, buru aldean, 1,14 m eta beste muturrean, ekialdean, 0,80 m da.</p> <br><br>
-
-                
+                <p class="fs-5">Tumuluak 17 metroko diametroa du. Erdialdean, gutxi-gorabehera, ekialdetik mendebaldera trapezio-formako ganbera kokatzen da, 1,80 m luze dena, nahiz eta ganberaren alde baterako 3 m luze zen harlauza bat aukeratu. Zabalera, buru aldean, 1,14 m eta beste muturrean, ekialdean, 0,80 m da.</p> 
 
                 <a href="https://www.itsaso.eus/eu/mandubizelaia-trikuharria#MANDUBIZELAIA" target="_blank"><button class="lang fw-bolder">+ info</button></a>
 
