Arreglamos todos los errores de posicionamiento en móviles que nos comentó Aizpea

--- a/html/3D/3DVideo.html
+++ b/html/3D/3DVideo.html
@@ -151,7 +151,7 @@
 
               <li>
                 <button class="button-info lang fw-bolder" onclick="cambiarAnimacion('Hildakoa')">
-                    <div><p>Hildakoa</p></div>
+                    <div><p>Ehorzketa</p></div>
                 </button>
               </li>
 
@@ -188,7 +188,7 @@
           model.setAttribute('src','https://sketchfab.com/models/5d3907d9d590473ba0f05a38e64ac9e1/embed');
 
           var info = document.getElementById('info3DVideo');
-          info.innerText="Mandubizelaia Trikuharrian hildakoa barneratzearen prozesua";
+          info.innerText="Mandubizelaia Trikuharrian ehorzketa prozesua";
           
           console.log("Cambiando animación en pantalla principal: "+anim);
         }
