--- a/html/mandubi/mandubi.html
+++ b/html/mandubi/mandubi.html
@@ -42,10 +42,10 @@ Arbela galkorragoa denez (ganberako 3 harlauzatatik 2 hala dira), industu ondore
         <nav class="nav-bar">
             <ol class="p-0 m-0">
                 <li class="button-nav-bar"><a href="mapa.html"><img src="../../media/roadWhite.svg" alt="icono como llegar"><p>Nola iritsi</p></a></li>
-                <li class="button-nav-bar"><a href="industaketa.html"><img src="../../media/investigationWhite.svg" alt="icono Investigación"> <p>Industaketa</p></a></li>
-                <li class="button-nav-bar"><a href="industaketa.html"><img src="../../media/galeryWhite.svg" alt="icono galería"><p>Argazkiak</p></a></li>
+                <li class="button-nav-bar"><a href="indusketa.html"><img src="../../media/investigationWhite.svg" alt="icono Investigación"> <p>Indusketa</p></a></li>
+                <li class="button-nav-bar"><a href="galeria.html"><img src="../../media/galeryWhite.svg" alt="icono galería"><p>Argazkiak</p></a></li>
                 <!--<li class="button-nav-bar"><a href="galeriaVR.html"><img src="../../media/vrWhite.svg" alt="icono galeria realidad aumentada"><p>VR Galeria</p></a></li>-->
-                <li class="button-nav-bar"><a href="img360.html"><img src="../../media/360White.svg" alt="icono 360º"><p>Mandubi</p></a></li>
+                <li class="button-nav-bar"><a href="img360.html"><img src="../../media/360White.svg" alt="icono 360º"><p>Mandubizelaia</p></a></li>
             </ol>
         </nav>
     </div>
