--- a/html/mandubi/indusketa.html
+++ b/html/mandubi/indusketa.html
@@ -24,7 +24,7 @@
 
             <article class="overflow-auto container-cards-scroll pt-2 ps-4 pe-4">
 
-                <h1 class="title fs-1">Industaketa Mandubizelaia Trikuharria</h1>
+                <h1 class="title fs-1">Mandubizelaia Trikuharriaren indusketa </h1>
 
                  <p class="fs-5">Trikuharria 1998-2000 urteetako 3 udatan zehar industu zen EHUko Joxean Mujika arkeologoa buru zela, Gipuzkoako Foru Aldundiako dirulaguntzaz eta UPV/EHUko ikasleen borondatezko lanarekin.</p>
 
@@ -50,10 +50,10 @@
         <nav class="nav-bar">
             <ol class="p-0 m-0">
                 <li class="button-nav-bar"><a href="mapa.html"><img src="../../media/roadWhite.svg" alt="icono como llegar"><p>Nola iritsi</p></a></li>
-                <li class="button-nav-bar"><a href="industaketa.html"><img src="../../media/investigationWhite.svg" alt="icono Investigación"> <p>Industaketa</p></a></li>
+                <li class="button-nav-bar"><a href="indusketa.html"><img src="../../media/investigationWhite.svg" alt="icono Investigación"> <p>Indusketa</p></a></li>
                 <li class="button-nav-bar"><a href="galeria.html"><img src="../../media/galeryWhite.svg" alt="icono galería"><p>Argazkiak</p></a></li>
                 <!--<li class="button-nav-bar"><a href="galeriaVR.html"><img src="../../media/vrWhite.svg" alt="icono galeria realidad aumentada"><p>VR Galeria</p></a></li>-->
-                <li class="button-nav-bar"><a href="img360.html"><img src="../../media/360White.svg" alt="icono 360º"><p>Mandubi</p></a></li>
+                <li class="button-nav-bar"><a href="img360.html"><img src="../../media/360White.svg" alt="icono 360º"><p>Mandubizelaia</p></a></li>
             </ol>
         </nav>
     </div>
