Corregimos la época de una de las fotos

--- a/html/mandubi/galeria.html
+++ b/html/mandubi/galeria.html
@@ -132,7 +132,7 @@
                         <img src="../../media/GaleriaFotos/Piezas/Kalkolito-Mandubizelaia-botoia.jpeg"
                              class="item"
                              alt="Botoia"
-                             data-description="Kalkolito garaikoak - V-erara zulatutako hezurrezko botoia"/>
+                             data-description="Brontze garaikoak - V-erara zulatutako hezurrezko botoia"/>
 
                         <img src="../../media/GaleriaFotos/Piezas/Kalkolito-Mandubizelaia-gezipunta-1.jpeg"
                              class="item"
