--- a/html/mandubi/img360.html
+++ b/html/mandubi/img360.html
@@ -22,7 +22,7 @@
             <div class="container-button">
                 <button class="lang fw-bolder" onclick="history.back()">Atzera</button>
             </div>
-            <a-scene vr-mode-ui="enabled: false">
+            <a-scene>
                 <a-sky   
                 src = "../../media/Mandubi360.jpg"
                 rotation="0 60 0"></a-sky >
