--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
                     alt="dolmen 1"
                     data-description="recreacion del dolmen 1"
                     ar ar-modes="webxr scene-viewer quick-look"
+                    xr-environment
                     camera-controls
                     autoplay
                     environment-image="neutral"
